unpackaged/main/default/objects/Qualtrics_Survey_Link__c/Qualtrics_Survey_Link__c.object-meta.xml
<CustomObject>
    <description>Used to hold the link information for Qualtrics Surveys</description>
    <label>Qualtrics Survey Link</label>
    <nameField>
        <label>Qualtrics Survey Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualtrics Survey Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>