unpackaged/main/default/objects/Qualtrics_Survey_Link__c/fields/Survey_Event_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Survey_Event_Endpoint__c</fullName>
    <description>The URL from Qualtrics for the Survey&apos;s JSON Event Endpoint</description>
    <label>Survey Event Endpoint</label>
    <type>Url</type>
</CustomField>