unpackaged/main/default/objects/Qualtrics_Survey_Link__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Helpline</fullName>
            </value>
            <value>
                <fullName>TAP</fullName>
            </value>
            <value>
                <fullName>Pat Nav</fullName>
            </value>
            <value>
                <fullName>Clinical Trials</fullName>
            </value>
            <value>
                <fullName>Follow Up</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
            <value>
                <fullName>Ratings</fullName>
            </value>
            <value>
                <fullName>Check-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>